# serval-run-v2

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROJECT_PLAN.md  todos.md
migrations/: 001_create_users.sql  002_create_projects.sql  003_create_environments.sql  004_create_collections.sql  005_create_apis.sql  006_create_scenarios.sql  007_create_reports.sql  008_create_responses.sql  009_create_refresh_tokens.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/entity/: api.rs  collection.rs  environment.rs  mod.rs  prelude.rs  project.rs  refresh_token.rs  report.rs  response.rs  scenario.rs  user.rs
src/handlers/: api.rs  auth.rs  collection.rs  common.rs  environment.rs  job.rs  mod.rs  project.rs  report.rs  scenario.rs  test_run.rs
src/middlewares/: auth.rs
src/models/: api.rs  collection.rs  environment.rs  mod.rs  project.rs  refresh_token.rs  report.rs  response.rs  scenario.rs  user.rs
src/queue/: job.rs  memory_queue.rs  mod.rs  redis_queue.rs
src/repositories/: api.rs  collection.rs  environment.rs  mod.rs  mongo.rs  ownership.rs  project.rs  refresh_token.rs  report.rs  response.rs  scenario.rs  user.rs
src/services/: auth.rs  gherkin.rs  mod.rs  test_runner.rs
src/worker/: executor.rs  main.rs  result_handler.rs
tests/: api_test.rs  auth_test.rs  collection_test.rs  environment_test.rs  job_test.rs  project_test.rs  report_test.rs  scenario_test.rs  test_run_test.rs
tests/common/: app.rs  factory.rs  mod.rs
